--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,15 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="my.edu.tarc.mycontact.MainActivity">
     <item
+        android:id="@+id/action_delete"
+        android:icon="@drawable/ic_baseline_delete_24"
+        android:orderInCategory="101"
+        android:title="@string/delete"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
-    <item
-        android:id="@+id/action_delete"
-        android:icon="@drawable/ic_baseline_delete_24"
-        android:orderInCategory="101"
-        android:title="@string/delete" />
     <item
         android:id="@+id/action_profile"
         android:title="@string/profile" />
